@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: librsvg
 Description: library that renders svg files using libart and pango
 Version: @VERSION@
-Requires: glib-2.0 gdk-pixbuf-2.0 libart-2.0 libxml-2.0 pangoft2 @LIBGSFPKG@
+Requires: glib-2.0 gdk-pixbuf-2.0 libart-2.0 libxml-2.0 pangoft2 @LIBGSFPKG@ @LIBCROCOPKG@
 Libs: -L${libdir} -lrsvg-2
 Cflags: -I${includedir}/librsvg-2
